--- a/tests/sqlx_test/Cargo.toml
+++ b/tests/sqlx_test/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "api"
+name = "sqlx_test"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = "0.5.0-rc.1"
+sqlx = { version = "0.5.10", features = [ "runtime-async-std-native-tls" ] }
