--- a/tests/old_diesel_rocket_test/OLD.Cargo.toml
+++ b/tests/old_diesel_rocket_test/OLD.Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+diesel = {version = "1.4.8", features = ["mysql"]}
+serde = "1.0.133"
+dotenv = "0.15.0"
+rocket = {version = "0.5.0-rc.1", features = ["json"]}
