--- a/tests/sea_orm_example/Cargo.toml
+++ b/tests/sea_orm_example/Cargo.toml
@@ -1,6 +1,3 @@
-[workspace]
-# A separate workspace
-
 [package]
 name = "sea-orm-example-async-std"
 version = "0.1.0"
@@ -9,7 +6,7 @@ publish = false
 
 [dependencies]
 async-std = { version = "^1.9", features = [ "attributes" ] }
-sea-orm = { path = "../../", features = [ "sqlx-all", "runtime-async-std-native-tls" ] }
+sea-orm = {version= "0.5.0", features = [ "sqlx-all", "runtime-async-std-native-tls" ] }
 serde_json = { version = "^1" }
 futures = { version = "^0.3" }
 async-stream = { version = "^0.3" }
