--- a/tests/sea_orm_rocket_integration_test/Cargo.toml
+++ b/tests/sea_orm_rocket_integration_test/Cargo.toml
@@ -18,7 +18,9 @@ rocket = { version = "0.5.0-rc.1", features = [
 rocket_dyn_templates = { version = "0.1.0-rc.1", features = [
   "tera",
 ] }
+serde = "1.0.133"
 serde_json = { version = "^1" }
+serde_derive = "0.9"
 
 [dependencies.sea-orm]
 version = "^0.5.0"
